--- a/channelmenu.html
+++ b/channelmenu.html
@@ -5,10 +5,23 @@
       background-size: cover;
     }
   </style>
+  <head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WG96BMK');</script>
+<!-- End Google Tag Manager -->
+  </head>
   <meta>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   </meta>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WG96BMK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <script type='text/javascript' src='https://test-service.force.com/embeddedservice/5.0/esw.min.js'></script>
     <script type='text/javascript'>
       var initESW = function(gslbBaseURL) {
