--- a/channelmenu.html
+++ b/channelmenu.html
@@ -31,6 +31,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </div>
 
+<button type="button">Click Me!</button>
+
 <script type='text/javascript' src='https://test-service.force.com/embeddedservice/5.0/esw.min.js'></script>
     <script type='text/javascript'>
       var initESW = function(gslbBaseURL) {
