--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/w3images/coffeehouse.jpg");
+  background-image: url("https://w3schools.com/w3images/coffeehouse.jpg");
   min-height: 75%;
 }
 
