--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
 
 
-<!---  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+ <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-WG96BMK');</script>
-End Google Tag Manager --> 
+<!--- End Google Tag Manager --> 
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -61,10 +61,10 @@ body, html {
 </style>
 <body>
 
-  <!-- Google Tag Manager (noscript)
+  <!--Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WG96BMK"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-End Google Tag Manager (noscript) -->
+<!--End Google Tag Manager (noscript) --> 
 
 
 <!-- Links (sit on top) -->
@@ -219,32 +219,6 @@ function myFunction() {
 
 </script>
 
-<script type='text/javascript' src='https://service.force.com/embeddedservice/menu/fab.min.js'></script>
-<script type='text/javascript'>
-  var initESW = function(gslbBaseURL) {
-    // Required if you want labels in a language that’s different from your user’s context.
-    //embedded_svc.menu.settings.language = ''; //For example, enter 'en' or 'en-US'
-
-    embedded_svc.menu.init(
-      'https://embeddedservicede.my.salesforce.com',
-      'https://d.gla3-phx.gus.salesforce.com/chat',
-      gslbBaseURL,
-      '00DB0000000K6Ez',
-      'Capricorn_Channel_Menu'
-    );
-  };
-
-  if (!window.embedded_svc || !window.embedded_svc.menu) {
-    var s = document.createElement('script');
-    s.setAttribute('src', 'https://embeddedservicede.my.salesforce.com/embeddedservice/menu/fab.min.js');
-    s.onload = function() {
-      initESW(null);
-    };
-    document.body.appendChild(s);
-  } else {
-    initESW('https://service.force.com');
-  }
-</script>
 
 </body>
 </html>
